src/app.css
:root {
    --panel-width: 357px;
    --panel-top: 70vw;
}

body {
    background-color: #222222;
    user-select: none;
}

#previewspace {
    width: calc(100vw - var(--panel-width));
    height: calc(100vh - 50px);
    box-sizing: border-box;
    padding: 15px;
    position: fixed;
    left: 0;
    top: 0;
}

#controlpanel-wrapper {
    position: fixed;
    right: 0;
    top: 0;
    box-sizing: border-box;
    width: var(--panel-width);
    height: 100vh;
    padding: 15px;
    padding-left: 0;
}

#controlpanel {
    width: 100%;
    height: 100%;
    background-color: #333333;
    padding: 10px;
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: #AFAFAF;
    overflow-y: auto;
}

#controlpanel td {
    text-align: center;
}

#controlpanel i {
    display: inline-block;
    color: #CDCDCD;
    font-size: 20px;
    margin-bottom: 5px;
}

#controlpanel hr {
    opacity: 0.1;
}

#bottompanel {
    width: calc(100vw - var(--panel-width));
    height: 50px;
    line-height: 50px;
    box-sizing: border-box;
    position: fixed;
    left: 0;
    bottom: 0;
    text-align: center;
}

input[type=number], select, input[type=color], button, .button {
    box-sizing: border-box;
    padding: 3px;
    outline: none!important;
    border: 1px solid grey;
    background-color: #222222;
    color: grey;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

input[type=number]:hover, select:hover, input[type=color]:hover, button:hover, .button:hover {
    border: 1px solid #A1A1A1;
    color: #A1A1A1;
}

input[type=number]:focus, select:focus, input[type=color]:focus, button:focus, .button:hover {
    border: 1px solid white;
    color: white;
}

#welcomescreen {
    top: 0;
    left: 0;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color: #222222;
    z-index: 69;
}

input[type=file] {
    display: none;
}

input[type=color] {
    padding: 0 2px;
    width: 27px;
    height: 27px;
}

button, .button {
    padding-left: 10px;
    padding-right: 10px;
}

#importPresetBtn {
    padding: 2px 6px;
    width: 111px;
}

@media only screen and (max-width: 555px) {
    #previewspace {
        width: 100vw;
        height: var(--panel-top);
    }
    #controlpanel-wrapper {
        top: var(--panel-top);
        width: 100vw;
        height: calc(100vh - var(--panel-top) - 50px);
        padding-left: 15px;
        padding-top: 0;
    }
    #bottompanel {
        width: 100vw;
    }
}

::-webkit-scrollbar {
    width: 6.9px;
}

::-webkit-scrollbar-track {
    opacity: 0;
}

::-webkit-scrollbar-thumb {
    background: #00000030;
}

::-webkit-scrollbar-thumb:hover {
    background: #00000020;
}

::selection {
    background-color: white;
    color: black;
}

canvas {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

#controlpanel input[type=number] {
    width: 57px;
}

/* Make Firefox number inputs show/hide spinner arrows like in Chrome */

input[type=number] {
    -moz-appearance: textfield;
}

input[type=number]:hover {
    -moz-appearance: revert!important;
}

input[type=number]:focus {
    -moz-appearance: revert!important;
}

